# latent-option-models-code

./: README.md  environment.yml  environment_convert.yml  install.sh  pyproject.toml  requirements.txt
.claude/agents/: architecture.md  data.md  exp-benchmark-nao-top10.md  exp-benchmark.md  exp-lom-scale.md  training.md
.claude/agents/skills/: code-simplification.md  dead-code-removal.md  large-dataset-conversion.md  oom-diagnosis.md
experiments/benchmark/: config.yaml  run.sh
experiments/benchmark_nao_top10/: config.yaml  draw_diagram.py  run.sh
experiments/lom_scale/: config.yaml  run.sh
experiments/temporal_abstraction/: config.yaml  run.sh
jobs/: myriad_nao_convert.pbs  myriad_nao_convert.sh  myriad_profile.pbs
lom/: __init__.py  config.py  dataset.py  encoders.py  lam.py  models.py  modules.py  tokeniser.py  training.py
scripts/: benchmark_formats.py  build_index.py  convert_to_npz.py  download_datasets.py  download_nao.py  myriad_nao_convert.sh  plot_pareto.py  prepare_data.py  pretrain.py  pretrain.yaml  profile_buffer.py  profile_conversion.py  profile_memory.py  setup_myriad.sh  worker_sweep.py
tests/: conftest.py  test_config.py  test_dataset.py  test_models.py  test_modules.py  test_silent_bugs.py  test_training.py
