[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 65", "wheel"]

[project]
name = "lom"
version = "0.1.0"
description = "Latent Option Models: learning abstract actions from actionless data (NeurIPS 2025)"
authors = [
  {name = "Eduardo Pignatelli", email = "edu.pignatelli@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
  "torch>=2.0",
  "numpy",
  "tyro",
  "wandb",
  "tqdm",
  "nle @ git+https://github.com/NetHack-LE/nle.git@main",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["lom*"]

[tool.black]
line-length = 100

[project.scripts]
lom-pretrain = "scripts.pretrain:main"
lom-download = "scripts.download_datasets:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
